Added MailConfig and services Added SqLite

--- a/JukeboxAPI/appsettings.json
+++ b/JukeboxAPI/appsettings.json
@@ -1,4 +1,13 @@
 ﻿{
+  "eMail": {
+    "UseDummyService": true,
+    "Password": "",
+    "Username": "",
+    "UseAuthentication": true,
+    "Host": "",
+    "Port": 465
+  },
+  
   "Logging": {
     "IncludeScopes": false,
     "Debug": {
