--- a/JukeboxAPI/JukeboxAPI.csproj
+++ b/JukeboxAPI/JukeboxAPI.csproj
@@ -15,7 +15,6 @@
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.5" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="2.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.0.1" />
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.0.0" />
     <PackageReference Include="Microsoft.NETCore.App" Version="2.0.5" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.1" />
     <PackageReference Include="NSwag.AspNetCore" Version="11.15.3" />
@@ -25,6 +24,9 @@
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.2" />
   </ItemGroup>
   <ItemGroup>
+    <DotNetCliToolReference Include="Microsoft.EntityFrameworkCore.Tools.DotNet" Version="2.0.0" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\Jukebox.Common.Abstractions\Jukebox.Common.Abstractions.csproj">
       <Project>{B2DBFF04-FB85-4517-AE34-E7068C2499C4}</Project>
       <Name>Jukebox.Common.Abstractions</Name>
@@ -32,6 +34,10 @@
     <ProjectReference Include="..\Jukebox.Common\Jukebox.Common.csproj">
       <Project>{6A7F07A3-8FE6-4CB8-885C-FC6C0D52BEF9}</Project>
       <Name>Jukebox.Common</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\SqLite\SqLite.csproj">
+      <Project>{45F7B087-F726-4767-9C14-6FD8767FFE8E}</Project>
+      <Name>SqLite</Name>
     </ProjectReference>
   </ItemGroup>
 </Project>
