Added Authorization stuff and Tests Added Scripts for EF

--- a/JukeboxAPI/appsettings.json
+++ b/JukeboxAPI/appsettings.json
@@ -7,6 +7,10 @@
     "Host": "",
     "Port": 465
   },
+
+  "hosting": {
+    "Url": "http://localhost:5000"
+  },
   
   "Logging": {
     "IncludeScopes": false,
@@ -17,7 +21,7 @@
     },
     "Console": {
       "LogLevel": {
-        "Default": "Warning"
+        "Default": "Trace"
       }
     }
   }
