--- a/Jukebox.Common.Abstractions/Jukebox.Common.Abstractions.csproj
+++ b/Jukebox.Common.Abstractions/Jukebox.Common.Abstractions.csproj
@@ -7,6 +7,7 @@
     <PackageReference Include="Castle.Core" Version="4.2.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.0.1" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.1" />
+    <PackageReference Include="ReSharper.Annotations" Version="7.1.3.130415" />
     <PackageReference Include="System.ComponentModel.Annotations" Version="4.4.1" />
   </ItemGroup>
 </Project>
