--- a/JukeboxAPI/JukeboxAPI.csproj
+++ b/JukeboxAPI/JukeboxAPI.csproj
@@ -18,6 +18,7 @@
     <PackageReference Include="Microsoft.NETCore.App" Version="2.0.5" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.1" />
     <PackageReference Include="NSwag.AspNetCore" Version="11.15.3" />
+    <PackageReference Include="ReSharper.Annotations" Version="7.1.3.130415" />
     <PackageReference Include="SpaMiddleware" Version="1.0.3" />
   </ItemGroup>
   <ItemGroup>
@@ -39,5 +40,10 @@
       <Project>{45F7B087-F726-4767-9C14-6FD8767FFE8E}</Project>
       <Name>SqLite</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Update="appsettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 </Project>
