--- a/jukebox/.gitignore
+++ b/jukebox/.gitignore
@@ -1,6 +1,6 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
-.package-lock.json
+package-lock.json
 
 # compiled output
 /dist
