--- a/JukeboxAPI/JukeboxAPI.csproj
+++ b/JukeboxAPI/JukeboxAPI.csproj
@@ -20,6 +20,7 @@
     <PackageReference Include="NSwag.AspNetCore" Version="11.15.3" />
     <PackageReference Include="ReSharper.Annotations" Version="7.1.3.130415" />
     <PackageReference Include="SpaMiddleware" Version="1.0.3" />
+    <PackageReference Include="taglib" Version="2.1.0" />
   </ItemGroup>
   <ItemGroup>
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.2" />
