--- a/SqLite/SqLite.csproj
+++ b/SqLite/SqLite.csproj
@@ -5,11 +5,11 @@
     <RootNamespace>Jukebox.Database.SqLite</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
+      <PackageReference Include="JetBrains.Annotations" Version="11.1.0"/>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="2.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.0.1" />
-    <PackageReference Include="ReSharper.Annotations" Version="7.1.3.130415" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Jukebox.Common.Abstractions\Jukebox.Common.Abstractions.csproj">
