--- a/JukeboxAPI/appsettings.HDS037.json
+++ b/JukeboxAPI/appsettings.HDS037.json
@@ -7,15 +7,14 @@
     "Host": "",
     "Port": 465
   },
-
   "hosting": {
     "Url": "http://localhost:5000"
   },
   "Index": {
     "IndexingPaths": [
+      "C:/Workspace/Music"
     ]
   },
-  
   "Logging": {
     "IncludeScopes": false,
     "Debug": {
