--- a/Jukebox.Common.Abstractions/Jukebox.Common.Abstractions.csproj
+++ b/Jukebox.Common.Abstractions/Jukebox.Common.Abstractions.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Castle.Core" Version="4.2.1" />
+      <PackageReference Include="ExceptionMiddleware" Version="1.0.1"/>
       <PackageReference Include="JetBrains.Annotations" Version="11.1.0"/>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.0.1" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.1" />
