--- a/jukebox/package.json
+++ b/jukebox/package.json
@@ -11,7 +11,7 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "jukebox-build": "ng build --op ../JukeboxAPI/wwwroot",
-    "electron": "electron ."
+    "electron": "ng build --bh ./ && electron ."
   },
   "private": true,
   "dependencies": {
