implemented proof of concept WebSockets

--- a/JukeboxAPI/appsettings.json
+++ b/JukeboxAPI/appsettings.json
@@ -15,6 +15,10 @@
     "IndexingPaths": [
     ]
   },
+  "Websocket": {
+    "KeepAliveInterval": "0.00:00:02",
+    "BufferSize": 4096
+  },
   
   "Logging": {
     "IncludeScopes": false,
@@ -24,6 +28,11 @@
       }
     },
     "Console": {
+      "Debug":{
+        "LogLevel": {
+          "Default": "Debug"
+        }
+      },
       "LogLevel": {
         "Default": "Warning"
       }
