--- a/JukeboxAPI/JukeboxAPI.csproj
+++ b/JukeboxAPI/JukeboxAPI.csproj
@@ -36,7 +36,8 @@
       <Project>{6A7F07A3-8FE6-4CB8-885C-FC6C0D52BEF9}</Project>
       <Name>Jukebox.Common</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Jukebox.Data.SqLite\Jukebox.Data.SqLite.csproj"/>
+      <ProjectReference Include="..\Jukebox.Data.InMemory\Jukebox.Data.InMemory.csproj"/>
+      <ProjectReference Include="..\Jukebox.Data.SqLite\Jukebox.Data.SqLite.csproj"/>
   </ItemGroup>
   <ItemGroup>
     <Content Update="appsettings.json">
