--- a/jukebox/package.json
+++ b/jukebox/package.json
@@ -30,10 +30,8 @@
     "@angular/router": "5.2.0",
     "angular2-jwt": "0.2.3",
     "core-js": "2.4.1",
-    "id3-parser": "^2.0.0",
     "ngx-electron": "1.0.4",
     "rxjs": "5.5.6",
-    "sqlite3": "^4.0.0",
     "zone.js": "0.8.19"
   },
   "devDependencies": {
@@ -45,6 +43,7 @@
     "@types/node": "6.0.60",
     "codelyzer": "4.0.1",
     "electron": "^1.8.2",
+    "electron-builder": "^20.8.1",
     "jasmine-core": "2.8.0",
     "jasmine-spec-reporter": "4.2.1",
     "karma": "2.0.0",
@@ -55,7 +54,7 @@
     "protractor": "5.1.2",
     "ts-node": "4.1.0",
     "tslint": "5.9.1",
-    "typescript": "2.5.3",
-    "electron-rebuild": "^1.7.3"
+    "typescript": "2.5.3"
   }
+
 }
