worked on #5 implemented backend logic for modifying IndexingPaths in appsettings.json

--- a/JukeboxAPI/appsettings.json
+++ b/JukeboxAPI/appsettings.json
@@ -1,4 +1,4 @@
-﻿{
+{
   "eMail": {
     "UseDummyService": true,
     "Password": "",
@@ -7,19 +7,19 @@
     "Host": "",
     "Port": 465
   },
-
   "hosting": {
     "Url": "http://localhost:5000"
   },
   "Index": {
     "IndexingPaths": [
+      "C:/Music",
+      "B:/Music"
     ]
   },
   "Websocket": {
     "KeepAliveInterval": "0.00:00:02",
     "BufferSize": 4096
   },
-  
   "Logging": {
     "IncludeScopes": false,
     "Debug": {
@@ -28,7 +28,7 @@
       }
     },
     "Console": {
-      "Debug":{
+      "Debug": {
         "LogLevel": {
           "Default": "Debug"
         }
