--- a/JukeboxAPI/appsettings.json
+++ b/JukeboxAPI/appsettings.json
@@ -12,8 +12,7 @@
   },
   "Index": {
     "IndexingPaths": [
-      "C:/Music",
-      "B:/Music"
+      "M:/MyTestMusic"
     ]
   },
   "Websocket": {
