--- a/Jukebox.Common/Jukebox.Common.csproj
+++ b/Jukebox.Common/Jukebox.Common.csproj
@@ -21,6 +21,7 @@
     <PackageReference Include="Microsoft.Extensions.FileProviders.Physical" Version="2.0.0" />
     <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="5.2.1" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.1" />
+      <PackageReference Include="System.IO.FileSystem.AccessControl" Version="4.4.0"/>
     <PackageReference Include="taglib" Version="2.1.0" />
   </ItemGroup>
 </Project>
