--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "jukebox",
   "version": "0.0.0",
-  "license": "MIT",
+  "description": "lol",
   "main": "main.js",
   "scripts": {
     "ng": "ng",
@@ -10,12 +10,13 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "jukebox-build": "ng build --op ../JukeboxAPI/wwwroot",
-    "electron": "ng build --bh ./ && electron .",
-    "electron-no-build": "electron .",
+    "jukebox-build": "ng build --op JukeboxAPI/wwwroot",
+    "electron": "ng build --bh ./ && electron jukebox",
+    "electron-no-build": "electron jukebox/",
     "electron-rebuild": "electron-rebuild"
   },
-  "private": true,
+  "author": "DarkPhantom",
+  "license": "MIT",
   "dependencies": {
     "@angular/animations": "5.2.0",
     "@angular/cdk": "5.2.2",
@@ -43,11 +44,9 @@
     "@types/jasminewd2": "2.0.2",
     "@types/node": "6.0.60",
     "codelyzer": "4.0.1",
-    "del": "^3.0.0",
     "electron": "^1.8.2",
     "electron-builder": "^20.8.1",
     "electron-rebuild": "^1.7.3",
-    "gulp": "^3.9.1",
     "jasmine-core": "2.8.0",
     "jasmine-spec-reporter": "4.2.1",
     "karma": "2.0.0",
@@ -58,6 +57,9 @@
     "protractor": "5.1.2",
     "ts-node": "4.1.0",
     "tslint": "5.9.1",
-    "typescript": "2.5.3"
+    "typescript": "2.5.3",
+    "del": "^3.0.0",
+    "gulp": "^3.9.1",
+    "gulp-exec": "^3.0.1"
   }
 }
