--- a/package.json
+++ b/package.json
@@ -44,9 +44,12 @@
     "@types/jasminewd2": "2.0.2",
     "@types/node": "6.0.60",
     "codelyzer": "4.0.1",
+    "del": "^3.0.0",
     "electron": "^1.8.2",
     "electron-builder": "^20.8.1",
     "electron-rebuild": "^1.7.3",
+    "gulp": "^3.9.1",
+    "gulp-exec": "^3.0.1",
     "jasmine-core": "2.8.0",
     "jasmine-spec-reporter": "4.2.1",
     "karma": "2.0.0",
@@ -54,12 +57,10 @@
     "karma-coverage-istanbul-reporter": "1.2.1",
     "karma-jasmine": "1.1.0",
     "karma-jasmine-html-reporter": "0.2.2",
+    "merge-stream": "^1.0.1",
     "protractor": "5.1.2",
     "ts-node": "4.1.0",
     "tslint": "5.9.1",
-    "typescript": "2.5.3",
-    "del": "^3.0.0",
-    "gulp": "^3.9.1",
-    "gulp-exec": "^3.0.1"
+    "typescript": "2.5.3"
   }
 }
