implemented Mac Notifications added dev dependencies to package.json

--- a/package.json
+++ b/package.json
@@ -30,11 +30,13 @@
     "@angular/platform-browser-dynamic": "5.2.0",
     "@angular/router": "5.2.0",
     "angular2-jwt": "0.2.3",
-    "core-js": "2.4.1",
+    "core-js": "^2.4.1",
     "electron-windows-interactive-notifications": "0.7.7",
     "electron-windows-notifications": "2.0.1",
     "ngx-electron": "1.0.4",
-    "rxjs": "5.5.6",
+    "node-mac-notifier": "^0.1.0",
+    "node-sass": "^4.9.0",
+    "rxjs": "^5.5.6",
     "zone.js": "0.8.19"
   },
   "devDependencies": {
@@ -47,8 +49,8 @@
     "child_process": "1.0.2",
     "codelyzer": "4.0.1",
     "del": "3.0.0",
-    "electron": "2.0.0",
-    "electron-rebuild": "1.7.3",
+    "electron": "^2.0.0",
+    "electron-rebuild": "^1.7.3",
     "gulp": "3.9.1",
     "gulp-exec": "3.0.1",
     "gulp-rename": "1.2.2",
