updated NuGet Pacakges implemented OSX Directory Search

--- a/JukeboxAPI/appsettings.json
+++ b/JukeboxAPI/appsettings.json
@@ -12,7 +12,7 @@
   },
   "Index": {
     "IndexingPaths": [
-      "B:\\Jukebox\\Electron"
+      "/Users/janmorawietz/Documents/Music"
     ]
   },
   "Websocket": {
