--- a/Jukebox.Common/Jukebox.Common.csproj
+++ b/Jukebox.Common/Jukebox.Common.csproj
@@ -11,6 +11,7 @@
   <ItemGroup>
       <PackageReference Include="Castle.Core" Version="4.3.1"/>
     <PackageReference Include="ExceptionMiddleware" Version="1.0.2" />
+      <PackageReference Include="Inflatable.Lastfm" Version="1.1.0.339"/>
       <PackageReference Include="JetBrains.Annotations" Version="2018.2.1"/>
       <PackageReference Include="MailKit" Version="2.0.6"/>
       <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="2.1.2"/>
