implemented Task Scheduler started work on LastFmClient

--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -11,6 +11,7 @@
 
     <ItemGroup>
         <ProjectReference Include="..\Jukebox.LastFm.Abstractions\Jukebox.LastFm.Abstractions.csproj"/>
+        <ProjectReference Include="..\Jukebox.LastFm\Jukebox.LastFm.csproj"/>
     </ItemGroup>
 
 </Project>
